[gd_scene load_steps=12 format=3 uid="uid://nq2uyh6ucmku"]

[ext_resource type="Texture2D" uid="uid://c8pjfdmect14c" path="res://levels/Level1/slidepuzzle/img/tile1.png" id="1_464yg"]
[ext_resource type="Script" path="res://levels/Level1/slidepuzzle/Area2D.gd" id="1_r8tyx"]
[ext_resource type="Texture2D" uid="uid://c16210kjeca1s" path="res://levels/Level1/slidepuzzle/img/tile2.png" id="2_wo57h"]
[ext_resource type="Texture2D" uid="uid://bxgquudri78vw" path="res://levels/Level1/slidepuzzle/img/tile3.png" id="3_raj0f"]
[ext_resource type="Texture2D" uid="uid://c7mg2y6iu5fpe" path="res://levels/Level1/slidepuzzle/img/tile4.png" id="4_eqdyc"]
[ext_resource type="Texture2D" uid="uid://cv5xa3y4qks25" path="res://levels/Level1/slidepuzzle/img/tile5.png" id="5_hw1ep"]
[ext_resource type="Texture2D" uid="uid://baeos5sjd5qdc" path="res://levels/Level1/slidepuzzle/img/tile6.png" id="6_dry6o"]
[ext_resource type="Texture2D" uid="uid://bxwsnygmy48yo" path="res://levels/Level1/slidepuzzle/img/tile7.png" id="7_bhybp"]
[ext_resource type="Texture2D" uid="uid://caipmp2uq6tkw" path="res://levels/Level1/slidepuzzle/img/tile8.png" id="8_vt7jn"]
[ext_resource type="Texture2D" uid="uid://dwt5313mmsfjd" path="res://levels/Level1/slidepuzzle/img/tile0.png" id="10_ckqme"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k24se"]
size = Vector2(757.632, 762.632)

[node name="Slide" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 80.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 176.0
color = Color(0.639216, 0.505882, 0.435294, 1)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(112, 96)
scale = Vector2(0.19, 0.19)
script = ExtResource("1_r8tyx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(252.763, 2.89474)
shape = SubResource("RectangleShape2D_k24se")

[node name="tile1" type="Sprite2D" parent="Area2D"]
position = Vector2(0, -252.632)
texture = ExtResource("1_464yg")

[node name="tile2" type="Sprite2D" parent="Area2D"]
position = Vector2(252.632, -252.632)
texture = ExtResource("2_wo57h")

[node name="tile3" type="Sprite2D" parent="Area2D"]
position = Vector2(505.263, -252.632)
texture = ExtResource("3_raj0f")

[node name="tile4" type="Sprite2D" parent="Area2D"]
texture = ExtResource("4_eqdyc")

[node name="tile5" type="Sprite2D" parent="Area2D"]
position = Vector2(252.632, 0)
texture = ExtResource("5_hw1ep")

[node name="tile6" type="Sprite2D" parent="Area2D"]
position = Vector2(505.263, 0)
texture = ExtResource("6_dry6o")

[node name="tile7" type="Sprite2D" parent="Area2D"]
position = Vector2(0, 252.632)
texture = ExtResource("7_bhybp")

[node name="tile8" type="Sprite2D" parent="Area2D"]
position = Vector2(252.632, 252.632)
texture = ExtResource("8_vt7jn")

[node name="tile0" type="Sprite2D" parent="Area2D"]
position = Vector2(505.263, 252.632)
texture = ExtResource("10_ckqme")
